--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
 
-    <script defer src="https://ajax.googleapis.com/ajax/libs/d3js/5.15.1/d3.min.js"></script>
+    <script defer type="text/javascript" src="./jquery/3.5.1/jquery-3.5.1.js"></script>
     <script defer src="render.js"></script>
   </head>
   <body>
